@@ -1,5 +1,12 @@
 2010-07-28  Paolo Bonzini  <bonzini@gnu.org>
 
+	* tests/Makefile.am: Add ldst test.
+	* tests/Makefile.in: Regenerate.
+	* tests/ldst.c: New.
+	* tests/ldst.ok: New.
+
+2010-07-28  Paolo Bonzini  <bonzini@gnu.org>
+
 	* THANKS: Add Paulo Cesar Pereira de Andrade.
 	* doc/porting.texi: Fix ordering of arguments in jit_stxi.
 	* lightning/i386/core-32.h (jit_replace): Remove cmp argument.
